removing invalid code that breaks SERVER-5670